Fixed bug on mobile menu

--- a/src/scss/import/_style-header.scss
+++ b/src/scss/import/_style-header.scss
@@ -12,7 +12,7 @@
     align-items: center;
     box-shadow: $box-shadow;
     position: relative;
-    z-index: 3;
+    z-index: 5;
     height: 60px;
 
     .logo{
